--- a/2024_ADS_TopEsp/src/visao/usuario/UsuarioCadastrar.form
+++ b/2024_ADS_TopEsp/src/visao/usuario/UsuarioCadastrar.form
@@ -148,6 +148,9 @@
         <Property name="text" type="java.lang.String" value="Fechar"/>
         <Property name="horizontalAlignment" type="int" value="2"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton2ActionPerformed"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
