--- a/2024_ADS_TopEsp/src/visao/usuario_grupo/GrupoUsuarioCadastrar.form
+++ b/2024_ADS_TopEsp/src/visao/usuario_grupo/GrupoUsuarioCadastrar.form
@@ -100,6 +100,9 @@
         </Property>
         <Property name="text" type="java.lang.String" value="Fechar"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jbFecharActionPerformed"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
